cabal-version:       2.4

name:                reflex-indexed-db
version:             0.1.1.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/reflex-indexdb#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md

library
  hs-source-dirs:      src
  exposed-modules:     Reflex.IDB
  build-depends:       base
                     , ghcjs-dom
                     , text
                     , aeson
                     , scientific
                     , bytestring
                     , containers
                     , transformers
                     , free
                     , dependent-sum
                     , dependent-map
                     , data-default
                     , jsaddle
                     , jsaddle-dom
                     , ref-tf
                     , reflex
                     , reflex-dom-core
                     , stm
                     , stm-chans
                     , lens
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language:    Haskell2010

test-suite reflex-indexdb-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
                     , ./src
  main-is:             Spec.hs
  build-depends:       base
                     , ghcjs-dom
                     , text
                     , aeson
                     , scientific
                     , bytestring
                     , containers
                     , transformers
                     , free
                     , dependent-sum
                     , dependent-map
                     , data-default
                     , jsaddle
                     , jsaddle-dom
                     , ref-tf
                     , reflex
                     , reflex-dom-core
                     , stm
                     , stm-chans
                     , lens
                     , reflex-dom
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/reflex-indexdb
